--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <title>Bienvenue</title>
 </head>
 <body>
-  <h1>Bienvenue sur le livre musical !</h1>
+  <h1>🎵 Bienvenue sur le livre musical !</h1>
   <p>Cliquez sur une chanson dans le livre pour écouter la musique associée.</p>
+
+  <ul>
+    <li><a href="0_la_chanson_d_amandin.mp3">0 - La chanson d’Amandin</a></li>
+    <li><a href="1_la_chanson_courage.mp3">1 - Deuxième chanson</a></li>
+    <li><a href="2_la_chanson_des_coucous.mp3">2 - Troisième chanson</a></li>
+    <li><a href="3_la_chanson_des_enfants.mp3">3 - Quatrième chanson</a></li>
+    <li><a href="4_la_chanson_des_petits_flocons.mp3">4 - Cinquième chanson</a></li>
+    <li><a href="2_la_chanson_des_petits_poissons_d_argent.mp3">5 - Sixième chanson</a></li>
+  </ul>
 </body>
 </html>
