--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <p>Cliquez sur une chanson dans le livre pour écouter la musique associée.</p>
 
   <ul>
-    <li><a href="0_la_chanson_d_amandin.mp3">0 - La chanson d’Amandin</a></li>
-    <li><a href="1_la_chanson_courage.mp3">1 - Deuxième chanson</a></li>
-    <li><a href="2_la_chanson_des_coucous.mp3">2 - Troisième chanson</a></li>
-    <li><a href="3_la_chanson_des_enfants.mp3">3 - Quatrième chanson</a></li>
-    <li><a href="4_la_chanson_des_petits_flocons.mp3">4 - Cinquième chanson</a></li>
-    <li><a href="2_la_chanson_des_petits_poissons_d_argent.mp3">5 - Sixième chanson</a></li>
+    <li><a href="01_amandin.mp3">1 - La chanson d’Amandin</a></li>
+    <li><a href="02_courage.mp3">2 - La chanson Courage</a></li>
+    <li><a href="03_coucous.mp3">3 - La chanson des coucous</a></li>
+    <li><a href="04_enfants.mp3">4 - La chanson des enfants</a></li>
+    <li><a href="05_flocons.mp3">5 - La chanson des petits flocons</a></li>
+    <li><a href="06_poissons.mp3">6 - La chanson des petits poissons d’argent</a></li>
   </ul>
 </body>
 </html>
